# patchwise.nvim

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: background.rs  edit.rs  error.rs  lib.rs
src/commands/: edit.rs  health.rs  mod.rs  replace.rs  selection.rs
src/feature/edit/: mod.rs  pending_edit.rs
src/nvim/: buffer.rs  dispatch.rs  mod.rs  notify.rs  selection.rs
src/prompt/: edit.rs  mod.rs
src/provider/: codex.rs  mod.rs  process.rs
xtask/: Cargo.toml
xtask/src/: main.rs
