[package]
name = "patchwise"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "xtask"]
resolver = "2"

# build a native shared library that neovim can load with 'require'
[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { version = "0.6.0", features = ["neovim-0-11"] }
thiserror = "2.0.18"
